# puzzle-path-tool

./: .editorconfig  .gitignore  .luarc.json  Cargo.toml  LICENSE-MIT  README.md  deny.toml  deps.sh  rust-toolchain  setup.sh
.github/workflows/: ci.yml  lua.ci.yml  rust.ci.yml  typescript.ci..yml
crates/base/: Cargo.toml
crates/base_macros/: Cargo.toml
crates/common_macros/: Cargo.toml
crates/puzzfmt_lib/: Cargo.toml
crates/puzzfmt_lib_c/: Cargo.toml  build.rs  cbindgen.toml
crates/puzzfmt_lib_c/src/: lib.rs
crates/puzzfmt_lib_wasm/: Cargo.toml
crates/puzzle_base/: Cargo.toml
crates/puzzle_base_build/: Cargo.toml
crates/puzzle_base_build/src/: lib.rs
crates/puzzle_base_macros/: Cargo.toml
crates/puzzle_core/: Cargo.toml
crates/puzzle_core/src/: explorer_collection.rs  lib.rs
crates/puzzle_core_build/: Cargo.toml
crates/puzzle_core_build/src/: lib.rs
crates/puzzle_core_macros/: Cargo.toml
crates/puzzle_formats/: Cargo.toml
crates/puzzle_formats/assets/: puzzleid.txt
crates/puzzle_formats/assets/test_urls/: constructed.txt  logic_masters.txt
crates/puzzle_formats/src/: format.rs  fpuzzles.rs  lib.rs  main.rs  puzzleid.txt  serialization.rs  sudokupad.rs  thread_test.rs  url.rs
crates/puzzle_formats/src/format/: external.rs  fpuzzles.rs  full.rs  logical.rs  parsing_resolver.rs  sudokupad.rs  visual.rs
crates/puzzle_formats/src/format/fpuzzles/: direction.rs
crates/puzzle_formats/src/format/sudokupad/: arrow.rs  cell.rs  cosmetic.rs  line.rs  metadata.rs  region.rs  trigger_effect.rs
crates/puzzle_formats/src/fpuzzles/: constraint.rs  grid_cell.rs
crates/puzzle_formats/src/sudokupad/: arrow.rs  cage.rs  metadata.rs
crates/puzzle_formats/src/url/: into_url.rs  resolved_url.rs  unresolved_url.rs  url_fetcher.rs  url_value.rs
crates/puzzle_formats/src/url/url_fetcher/: cache.rs  map_err.rs  reqwest.rs  rusqlite.rs  tokio.rs  tokio_rusqlite.rs
crates/puzzle_formats/src/url/url_fetcher/rusqlite/: rusqlite_async.rs  rusqlite_blocking.rs
crates/puzzle_formats_c/: Cargo.toml  build.rs
crates/puzzle_formats_c/src/: lib.rs
crates/puzzle_path_tool/: Cargo.toml  package.json  tsconfig.json
crates/puzzle_path_tool/scripts/: test.ts  test2.ts
crates/puzzle_path_tool/scripts/arrow/: arrow_rule.lua  def.lua
crates/puzzle_path_tool/scripts/arrow/ded1/: ded1_ded.lua  step1.lua
crates/puzzle_path_tool/scripts/core/: meta_test.lua
crates/puzzle_path_tool/src/: lib.rs  main.rs
crates/puzzle_path_tool_c/: Cargo.toml  build.rs  cbindgen.toml
crates/puzzle_path_tool_c/src/: lib.rs
crates/puzzle_path_tool_cli/: Cargo.toml  build.rs
crates/puzzle_path_tool_cli/src/: commands.rs  main.rs  run_application.rs
crates/puzzle_path_tool_cli/src/run_application/: run_ui.rs
crates/puzzle_path_tool_cli/src/run_application/run_ui/: views.rs
crates/puzzle_path_tool_cli/src/run_application/run_ui/views/: sudoku_canvas.rs
crates/puzzpt_lib/: Cargo.toml
crates/puzzpt_lib/scripts/core/: type2.lua
crates/puzzpt_lib_c/: Cargo.toml
crates/puzzpt_lib_wasm/: Cargo.toml
crates/puzzpt_program_cli/: Cargo.toml
docs/: workspace_setup.md
docs/rules/: rules.schema.json  rules.yaml
scripts/core/: example1.lua  type2.lua
