[workspace]
members = ["crates/*"]
resolver = "3"


[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rotne", "WiggelMc"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/puzzle-path-tool/puzzle-path-tool"
homepage = "https://github.com/puzzle-path-tool/puzzle-path-tool"
readme = "README.md"


[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"


[workspace.dependencies]
puzzle-core = { version = "0.1.0", path = "crates/puzzle_core" }
puzzle-core-build = { version = "0.1.0", path = "crates/puzzle_core_build" }
puzzle-core-macros = { version = "0.1.0", path = "crates/puzzle_core_macros" }
puzzle-formats = { version = "0.1.0", path = "crates/puzzle_formats" }
puzzle-path-tool = { version = "0.1.0", path = "crates/puzzle_path_tool" }
