[package]
name = "puzzle-base-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
description.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
puzzle-base = { workspace = true }
