[package]
name = "puzzle-core-build"

description = "Common build logic for `puzzle-*` crates."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["internal"]
categories = ["development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2.0.12"
