[package]
name = "puzzle-core-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
puzzle-core = { workspace = true }
