[package]
name = "puzzle-core-macros"

description = "Common macros for `puzzle-*` crates."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["internal"]
categories = ["development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
puzzle-core = { workspace = true }
