[package]
name = "puzzle-formats"

description = "Parse and convert common variant sudoku formats and urls."
repository = "https://github.com/puzzle-path-tool/puzzle-path-tool/tree/main/crates/puzzle_formats"
homepage = "https://github.com/puzzle-path-tool/puzzle-path-tool/tree/main/crates/puzzle_formats"
readme = "README.md"
keywords = ["sudoku", "data"]
categories = ["parser-implementations", "game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ctreg = "1.0.3"
lz-str = "0.2.1"
num_enum = "0.7.3"
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls-native-roots", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
