[package]
name = "puzzle-formats"

description = "Parse and convert common variant sudoku formats and urls."
repository = "https://github.com/puzzle-path-tool/puzzle-path-tool/tree/main/crates/puzzle_formats"
homepage = "https://github.com/puzzle-path-tool/puzzle-path-tool/tree/main/crates/puzzle_formats"
readme = "README.md"
keywords = ["sudoku", "data"]
categories = ["parser-implementations", "game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
reqwest-blocking = ["reqwest/blocking"]

[lints]
workspace = true

[dependencies]
async-trait = "0.1.88"
ctreg = "1.0.3"
itertools = "0.14.0"
lz-str = "0.2.1"
num_enum = "0.7.3"
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
regex = "1.11.1"
reqwest = { version = "0.12.15", optional = true, default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
url = "2.5.4"
