[package]
name = "puzzle-formats-c"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
puzzle-formats = { workspace = true }

[build-dependencies]
anyhow = "1.0.98"
cbindgen = "0.28.0"
puzzle-core-build = { workspace = true }
