[package]
name = "puzzle-path-tool"

description = "Programmatically construct and generate Sudoku puzzles."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["sudoku", "gamedev", "generator", "random", "tool"]
categories = ["game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
mlua = { version = "0.10.3", features = ["luajit"] }
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
puzzle-formats = { workspace = true }
