[package]
name = "puzzle-path-tool"

description = "Programmatically construct and generate Sudoku puzzles."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["sudoku", "gamedev", "generator", "random", "tool"]
categories = ["game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true

[dependencies] 
mlua = { version = "0.10.3", features = ["lua54", "vendored"] }
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
puzzle-formats = { workspace = true }
quickjs_runtime = { version = "0.15.3", default-features = false, features = ["quickjs-ng", "typescript"]}

[dev-dependencies]
divan = "0.1.21"
