[package]
name = "puzzle-path-tool"

description = "Programmatically construct and generate Sudoku puzzles."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["sudoku", "gamedev", "generator", "random", "tool"]
categories = ["game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true

[dependencies] 
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
puzzle-formats = { workspace = true }
rquickjs = "0.9.0"
swc = "26.0.0"
swc_common = { version = "12.0.1", features = ["sourcemap"] }
swc_ecma_ast = "12.0.0"
swc_ecma_codegen = "14.0.0"
swc_ecma_parser = "15.0.1"
swc_ecma_transforms_base = "16.0.0"
swc_ecma_transforms_typescript = "18.0.0"
swc_ecma_visit = "12.0.0"

[dev-dependencies]
divan = "0.1.21"
