[package]
name = "puzzle-path-tool-c"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
description.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
puzzle-path-tool = { workspace = true }

[build-dependencies]
cbindgen = "0.28.0"
puzzle-base-build = { workspace = true }
