[package]
name = "puzzle-path-tool-c"

description = "C bindings for the `puzzle-path-tool` crate."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["sudoku", "gamedev", "generator", "random", "tool"]
categories = ["game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml"
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[lints]
workspace = true

[dependencies]
puzzle-path-tool = { workspace = true }

[build-dependencies]
anyhow = "1.0.98"
cbindgen = "0.28.0"
puzzle-core-build = { workspace = true }
