[package]
name = "puzzle-path-tool-cli"

description = "A command line utility for programmatically constructing and generating sudoku puzzles using the `puzzle-path-tool` crate."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["sudoku", "gamedev", "generator", "random", "tool"]
categories = ["command-line-utilities", "game-development", "development-tools"]

include = [
  "../LICENSE-APACHE",
  "../LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
  "assets/**/*",
]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "puzzpt"
path = "src/main.rs"

[lints]
workspace = true

[features]
ui = ["dep:iced", "dep:image"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
iced = { version = "0.13.1", optional = true }
image = { version = "0.25.6", optional = true }
notify = { version = "8.0.0", features = ["serde"] }
puzzle-core = { workspace = true }
puzzle-core-macros = { workspace = true }
puzzle-formats = { workspace = true }
puzzle-path-tool = { workspace = true }
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"

[build-dependencies]
puzzle-core-build = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
